# dataspace-api-gateway

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
app/: main.py
app/api/: api.py  dependencies.py  ouranos.py
app/core/: settings.py
app/schemas/: ouranos.py
utils/: get_cfp.sh  get_token.sh  get_trace_id.sh
